# Mlops-Github

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: checks.yml
app/: .flake8
app/app/: settings.py
config/: settings.py
