[tool.poetry]
name = "mlops-github"
version = "0.1.0"
description = ""
authors = ["SuhwanKim <suhwans88@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
